# luca-klio-lambda-sdk

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.cfg
dev-docs/: README.md  how to upload.txt
dist-docs/: Add API token · PyPI.URL  Build System Support - setuptools 65.2.0.post20220821 documentation.URL  Package Discovery and Resource Access using pkg_resources - setuptools 65.2.0.post20220821 documentation.URL  Packaging Python Projects — Python Packaging User Guide.URL  Packaging and distributing projects — Python Packaging User Guide.URL  Python Packaging User Guide — Python Packaging User Guide.URL  TOML English v1.0.0.URL  The .pypirc file — Python Packaging User Guide.URL  luca-klio-lambda-sdk · PyPI.URL
lambda_template/: README.md
src/luca-klio-lambda-sdk/: __init__.py
src/luca-klio-lambda-sdk/eventhandler/: AWSEventHandler.py
src/luca-klio-lambda-sdk/fileio/: download_file.py  file_name.py  open_file.py  upload_to_URL.py
